devscripts (2.10.48) UNRELEASED; urgency=low

  * Update Standards Version to 3.8.1 (no changes required)

 -- Adam D. Barratt <adam@adam-barratt.org.uk>  Wed, 04 Mar 2009 19:41:41 +0000

devscripts (2.10.47) unstable; urgency=low

  [ Adam D. Barratt ]
  * dcontrol: Produce "friendly" error messages if liburi-perl and/or
    libwww-perl aren't installed.
  * debdiff:
    + Don't treat an absence of differences as an error when comparing
      source packages. (Closes: #515683)
    + Set the exit status correctly when comparing source packages.  If
      differences were found, debdiff will now exit with a status of 1, as
      per debdiff(1).
    + Support bzip2 and lzma compressed orig tarballs. (Closes: #473969)
  * debuild: Support bzip2 and lzma compressed orig tarballs.
    (Closes: #473974)
  * licensecheck:
    + Document --no-conf.
    + Fix an uninitialised variable warning when --no-conf is used. Thanks.
      Cristian Greco. (Closes: #515047)
  * nmudiff:
    + Rework the arguments passed to mutt in order to avoid problems
      attaching the diff with recent versions of mutt.  Thanks, Adeodato
      Simó. (Closes: #518127)
    + Allow the specification of a particular DELAYED queue, rather
      than including the "DELAYED/XX" placeholder.  May be specified as
      0 to remove mention of DELAYED. (Closes: #518126)
  * rc-alert: Modify the description of the "I" flag to reference the
    squeeze-ignore tag rather than etch-ignore.
  * debian/control, README: Add liburi-perl to the description of dcontrol.

  [ James Vega ]
  * bts: Include the module name when calling MIME::Base64::encode_base64
    since MIME::Base64 is only being 'require'd not 'use'd.  Thanks Євгеній
    Мещеряков. (Closes: #516117)
  * debchange: Do not use an empty gecos field when trying to determine the
    maintainer's name. (Closes: 516423)

  [ Christoph Berg ]
  * dcontrol: New script to query binary and source package control files at